# big-data-playground

./: .gitignore  README.md  pyproject.toml
scripts/: generate_mock_data.py
src/: filter_mock_data.py  test_loc.py  test_np_where.py  test_readin_times.py
src/test_filter_scripts/: test_dask.py  test_duckdb.py  test_pandas.py  test_polars.py
src/utils/: timing.py
