[project]
name = "big-data-playground"
version = "0.1.0"
description = "Testing out read_in times for large data with different libraries and comparing filtering times."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dask>=2025.10.0",
    "duckdb>=1.4.1",
    "fastparquet>=2024.11.0",
    "loguru>=0.7.3",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "polars>=1.34.0",
    "psycopg2-binary>=2.9.11",
    "pyarrow>=22.0.0",
    "redis[hiredis]>=7.0.1",
    "scikit-learn>=1.7.2",
    "sqlalchemy>=2.0.44",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "devtools>=0.12.2",
    "isort>=7.0.0",
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "ruff>=0.14.2",
]
